Update to Java 11, issue #6